@@ -2,14 +2,17 @@ class Sys::Time {
   use Sys::Time::Timeval;
   use Sys::Time::Timezone;
   use Sys::Time::Itimerval;
+  use Sys::Time::Timespec;
   
   native static method gettimeofday : int ($tv : Sys::Time::Timeval, $tz : Sys::Time::Timezone);
 
   native static method clock : long ();
-  
-  # TODO
 
+  native static method clock_gettime : int ($clk_id : int, $tp : Sys::Time::Timespec);
+  
 =pod
+
+TODO
 
 getitimer setitimer clock_gettime clock_getres
 
